--- a/Pages/CalenderPage.xaml
+++ b/Pages/CalenderPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
 xmlns:calendar="clr-namespace:Syncfusion.Maui.Calendar;assembly=Syncfusion.Maui.Calendar"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MauiApp1.Pages.CalenderPage"
+             x:Class="MauiApp1.CalenderPage"
              Title="CalenderPage">
     <VerticalStackLayout>
         <calendar:SfCalendar />
